; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_help.c_add_man_viewer.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_help.c_add_man_viewer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.man_viewer_list = type { %struct.man_viewer_list* }

@man_viewer_list = common dso_local global %struct.man_viewer_list* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @add_man_viewer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_man_viewer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.man_viewer_list**, align 8
  store i8* %0, i8** %2, align 8
  store %struct.man_viewer_list** @man_viewer_list, %struct.man_viewer_list*** %3, align 8
  br label %4

4:                                                ; preds = %8, %1
  %5 = load %struct.man_viewer_list**, %struct.man_viewer_list*** %3, align 8
  %6 = load %struct.man_viewer_list*, %struct.man_viewer_list** %5, align 8
  %7 = icmp ne %struct.man_viewer_list* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %4
  %9 = load %struct.man_viewer_list**, %struct.man_viewer_list*** %3, align 8
  %10 = load %struct.man_viewer_list*, %struct.man_viewer_list** %9, align 8
  %11 = getelementptr inbounds %struct.man_viewer_list, %struct.man_viewer_list* %10, i32 0, i32 0
  store %struct.man_viewer_list** %11, %struct.man_viewer_list*** %3, align 8
  br label %4

12:                                               ; preds = %4
  %13 = load %struct.man_viewer_list**, %struct.man_viewer_list*** %3, align 8
  %14 = load %struct.man_viewer_list*, %struct.man_viewer_list** %13, align 8
  %15 = load i8*, i8** %2, align 8
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @FLEX_ALLOC_STR(%struct.man_viewer_list* %14, i8* %15, i8* %16)
  ret void
}

declare dso_local i32 @FLEX_ALLOC_STR(%struct.man_viewer_list*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
